September 7, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfsound/alsa.c: Removed ALSA-specific CDDA stuff, which causes
   problems with some versions of PulseAudio.
 * plugins/dfsound/spu.c: Implemented CDDA support in a more "general" way.
 * plugins/dfsound/xa.c: Likewise.
 * plugins/dfsound/externals.h: Likewise.
 * plugins/dfsound/spu.h: Likewise.
 * plugins/dfsound/xa.h: Likewise.
 * plugins/dfsound/cfg.c: Removed NOTHREADLIB.
 * plugins/dfsound/spu.c: Likewise.
 * plugins/dfsound/stdafx.h: Likewise.
 * libpcsxcore/cdriso.c: Reverted to the method which feeds the CDDA data to
   the SPU plugin at an interval instead of continuously, otherwise it's still
   broken with spuEternal in SPUasync mode.

September 6, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfsound/spu.c: Fixed frequency modulation emulation. Handle IRQs
   in the decoded sound buffer areas. (sync'ed from the P.E.Op.S SPU 1.09)
 * plugins/dfsound/dma.c: Likewise.
 * plugins/dfsound/registers.c: Likewise.
 * plugins/dfsound/xa.c: Likewise.
 * plugins/dfsound/externals.h: Likewise.

September 5, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Don't feed CDDA data to the SPU plugin when CDDA
   is muted, which fixes the "noise" in Final Fantasy 8. Also check for
   image.bin.toc in addition to image.toc.
 * plugins/dfsound/alsa.c: Added support for CDDA volume.

September 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Don't delay before feeding CDDA data to the SPU
   plugin.
 * plugins/dfsound/alsa.c: Don't try initializing CDDA sound handle over
   and over and over again if failed.

September 3, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Fixed time overflow on 32-bit GNU/Linux system.

September 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdrom.c: Added the definations of some missing commands.

August 30, 2009 Wei Mingzhi <weimingzhi@gmail.com>
